style.css
/* 0. general */
/* 0.1 icons */
/* 0.2 dropdown menu */
/* 0.3 hover */

/* 1. header */
/* 1.1 header news line */

/* 2. description */

/* 3. persons slider */

/* 4. article section */

/* 5. news section */

/* 6. footer */

/* 7. media */



/*font-family: 'Roboto', sans-serif;
font-family: 'Open Sans', sans-serif;*/

/* general */

*,
*::before,
*::after {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	color: #363636;
	background: #fff;
	font-size: 12px;
	line-height: 20px;
	font-style: normal;
	font-family: 'Roboto', sans-serif;
}

a {
	text-decoration: none;
}

.image-indicator,
.header__items-wrapper,
.nav__container,
.news-line__wrapper,
.description-area,
.slider-buttons,
.persons-slider-section,
.persons-slider,
.article-section,
.news-section-block,
.news-section__images-wrapper,
.footer__about,
.footer__form
 {
	display: -webkit-flex;
	display: -moz-flex;
	display: -ms-flex;
	display: -o-flex;
	display: flex;
}

.container,
.max-content-width {
	margin: 0 auto;
	max-width: 962px;
	width: 100%;
}

.section-separator {
	display: block;
	padding: 5px 0;
	background: #fbfbfb;
	border-top: 1px solid #ececec;
}

.section-separator:first-child {
	padding: 3px 0;
}


.person-slider__button,
.slider-button,
.footer__form__button {
	cursor: pointer;
}

/* 0.1 icons */

.social-icons__wrapper {
	position: relative;
	max-width: 962px;
	padding-bottom: 215px;
}

.social-icons {
	position: absolute;
	right: 0;
}

.social-icons__link {
	display: block;
	width: 50px;
	height: 50px;
	margin: 10px;	
	overflow: hidden;
	border-radius: 50%;
}

.facebook-icon {
	background: #f26c4f url(img/icons/facebook.png) center center no-repeat;
}

.rss-icon {
	background: #f26c4f url(img/icons/rss.png) center center no-repeat;
}

.twitter-icon {
	background: #f26c4f url(img/icons/twitter.png) center center no-repeat;
}

/* 0.2 dropdown menu */

.home-item {
	position: relative;
}

.dropdown-menu {
	/*display: none;*/
	visibility: hidden;
	opacity: 0;
	position: absolute;
	top: 10px;
	left: 0;
	padding: 30px 65px 45px 30px;
	background: #272727;
	font-size: 12px;
	border-radius: 5px;

	transition: .9s;
}

.home-item:hover .dropdown-menu {
	/*display: block;*/
	opacity: 1;
	transform: translateY(35px);
	visibility: visible;
	transition:  ease-in .4s;

}

.dropdown-menu__item {
	
	position: relative;
	white-space: nowrap;
	color: #fff;
	display: block;
}

.dropdown-menu__item:not(:last-child) {
	margin-bottom: 20px;
}

/* 0.3 hover */

@keyframes logo-hovered {
	15% {
		transform: translateX(9px);
	}

	30% {
		transform: translateX(-9px);
	}

	40% {
		transform: translateX(-6px);
	}

	50% {
		transform: translateX(3px);
	}

	65% {
		transform: translateX(0);
	}
}

.header__logo:hover {
	animation: logo-hovered 0.7s ease;
	animation-iteration-count: 1;
}

.dropdown-menu__item:hover,
.nav__item:hover .nav__item-link {
	transition: .2s;
	color: #e4593a;
}

.social-icons__link {
	transition: transform .6s ease-out;
}

.social-icons__link:hover {
	transform: scale(1.1);
	transition: transform .4s ease;
}

@keyframes change-color {

	30% {
		background-color: #FA5858;
		color: #B40404;
	}

	70% {
		background-color: #F79F81;
	}

}

.footer__form__button {
	transition: .4s transform  ease-out;
}

.footer__form__button:hover {
	transform: scale(1.1);
	animation: change-color 1.8s ease;
	animation-iteration-count: infinite;
}


/*news*/

.checked-point {
	transition: all .4s;
	transform: scale(1.1);
	box-shadow: 0 0 0 3px #d74c2d;
}

@keyframes change-news {

	0% {
		transform: translateX(100%);
		opacity: 0;
	}

/*	25% {
		transform: translateX(0px);
		opacity: 1;
	}*/

	50% {
		transform: translateX(0%);
		opacity: 1;
	}

/*	75% {
		transform: translateX(0px);
		opacity: 1;
	}*/

	100% {
		transform: translateX(-100%);
		opacity: 0;
	}
}

.current-news {
	animation: change-news 3.5s;
	animation-iteration-count: infinite;
}



/* 1. header */

.header-wrapper {
	padding: 20px 0;
	background: url(img/header_background.jpg) center center no-repeat;
	background-size: cover;
}

.header {
	display: block;
	padding: 26px 0;
	margin-bottom: 250px;
	width: 100%;
	background-color: #343434;
}

.header__items-wrapper {
	justify-content: space-between;
	align-items: center;
}

.header__logo {
	display: block;
	margin: 0;
	padding: 0;
}

/*.header__nav {

}*/

.nav__container {
	justify-content: space-between;	
	list-style: none;
	font-family: 'Open Sans', sans-serif;
}

.nav__item {
	margin: 0 15px;
}

.nav__item-link {
	color: #e6e6e6;
	padding: 5px 0;
}

/* 1.1 header news line */

.header__news-line {
	position: relative;
	color: #fff;
	background: #e4593a;
	padding: 15px 0;
	font-family: 'Open Sans', sans-serif;
}

.news-line__wrapper {
	justify-content: space-between;
	align-items: center;
}

.news-line__text {
	display: block;
	overflow: hidden;
}

.news-line__title {
	margin-right: 35px;
	text-transform: uppercase;
}

.news-line__message {
	margin-left: 18px;
}

.news-line__separator {
	top: 0;
	position: absolute;
	font-size: 28px;
	line-height: 50px;
}

.image-indicator {
	flex-basis: 42px;
	justify-content: space-around;
	position: relative;
	margin-right: 15px;
	margin-left: 10px;
}

.image-indicator__point {
	position: absolute;
	top: 0;
	display: inline-block;
	padding: 3px;
	background: #fff;
	
	border-radius: 50%;
}

.image-indicator__point:first-child {
	left: 0;
}

.image-indicator__point:nth-child(2) {
	left: 12px
}

.image-indicator__point:last-child {
	left: 24px;
}

/* 2. description */

.description-area {
	justify-content: space-between;
}

.description__cite {
	display: block;
	width: 100%;
	max-width: 730px;
	margin-top: 40px;
}

.cite__header,
.cite__top-article,
.cite__bottom-article {
	font-style: normal;
}

.cite__header {
	margin-bottom: 20px;
	font-size: 12px;
	font-weight: bold;
	color: #272630;
	text-transform: uppercase;
}

.cite__header span {
	color: #f26c4f;
}

.cite__top-article {
	font-size: 15px;
	line-height: 25px;
	color: #737373;
}

.cite__bottom-article {
	margin: 35px 0 30px 0;
}

.slider-buttons {
	margin-top: 15px;
}

.slider-button {
	margin: 10px;
	display: block;
	position: relative;
	border-radius: 50%;
	font-size: 48px;
	color: #fff;
	background: #e2e2e2;
	width: 90px;
	height: 90px;
	border: none;
}


/* 3. persons slider */

.persons-slider-section {
	justify-content: center;
	align-items: stretch;
	max-width: 1100px;
	margin: 0 auto;
}

.persons-slider__card {
	font-size: 12px;
	text-align: center;
}

.persons-slider {
	justify-content: space-between;
	align-items: center;
	padding: 25px 0 40px 0;
}

.person-slider__button {
	align-self: top;
	color: #000;
	font-size: 60px;
	background: #fff;
	border: none;
	margin-bottom: 7%;
}

.persons-slider__photo {
	display: block;
	border-radius: 50%;
	max-width: 213px;
	width: 100%;
	height: auto;
}

.persons-slider__name {
	margin: 23px 15px 17px 0;
	color: #272630;
	font-size: 12px;
	font-family: 'Open Sans', sans-serif;
	text-transform: uppercase;
}

.persons-slider__description {
	color: #363636;
	font-style: italic;
}

/* 4. article section */

.article-section {
	justify-content: space-between;
	padding: 32px 0 60px 0;
}

.article__cite-wrapper:first-child {
	padding-right: 50px;
}

.article__title {
	color: #272630;
	font-size: 12px;
	font-weight: bold;
	text-transform: uppercase;
	font-family: 'Open Sans', sans-serif;
	padding-bottom: 20px;
}

.article__title span {
	color: #f26c4f;
}

.article__cite .paragraph-left:nth-child(2) {
	margin-top: 13px;
	margin-bottom: 35px;
}

.article__cite .paragraph-right:nth-child(2) {
	margin: 36px 0;
}

/* 5. news section */

.news-section {
	padding: 34px 0;
}

.news-section__news-wrapper {
	padding-right: 10px;
	max-width: 280px;
}

.news-section__news-wrapper p:nth-child(2) {
	padding-bottom: 40px;
}

.news-section__images-wrapper,
.news-section-block {
	justify-content: space-between;
}

.news__image-card {
	width: 100%;
	max-width: 305px;
}

.news__image-card:last-child {
	margin-left: 40px;
}

.news__image {
	display: block;
	width: 100%;
	max-width: 285px;
	height: auto;
	border: 10px solid #fbfbfc;
}

.news__image-title {
	margin: 10px 0 13px 0;
	color: #272630;
	font-family: 'Open Sans', sans-serif;
	text-transform: uppercase;
}

.news__image-date {
	font-size: 11px;
	color: #aaaaaa;
	font-style: italic;
	margin-bottom: 5px;
}

/*end news section*/

.empty-space {
	padding: 34px 0;
	background: #fff;
}

/* 6. footer */

.footer-wrapper {
	background: #343434;

}

.footer {
	padding: 52px 0 113px 0;
}

.footer__about {
	justify-content: space-between;
}

.footer__description {
	max-width: 450px;
	margin-bottom: 25px;
	padding-right: 15px;

	color: #d6d6d6;
}

.footer__form {
	position: relative;
	bottom: 10px;
	align-items: center;
	padding: 0;
	margin: 0;
}

.footer__form::before {
	position: absolute;
	left: 17px;
	content: '';
	background-image: url(img/icons/message-icon.png);
	width: 15px;
	height: 13px;
}

.footer__form__text-input {
	padding: 17px 200px 17px 50px;
	border-radius: 5px;
	border: none;
	color: #7c7c7c;
}

.footer__form__text-input::placeholder {
	font-size: 12px;
	color: #7c7c7c;
}

.footer__form__button {
	position: absolute;
	right: 10px;
	border: none;
	border-radius: 5px;
	padding: 10px;	
	font-size: 14px;
	color: #ca3c20;
	background: #f27155;
}

.footer-icons {
	position: relative;
	display: flex;
}

.footer-icons__link {
	margin: 0;
	padding: 0;
}

.footer-icons__link:not(:first-child) {
	margin-left: 13px;
}

.footer__copyright {
	display: block;
	margin-top: 35px;
	color: #787878;
}

/* 7. media */

@media screen and (max-width: 990px) {
	
	.header__items-wrapper,
	.news-line__wrapper,
	.description-area,
	.persons-slider__description,
	.article-section,
	.news-section,
	.footer {
		padding-left: 20px;
		padding-right: 20px;
	}

	.footer__form__text-input {
		padding-right: 100px;
	}
}

@media screen and (max-width: 680px) {

	.news-section-block {
		display: block;
	}

	.news-section__news-wrapper  {
		max-width: 100%;
	}

	.news-section__news-wrapper p:nth-child(2) {
		padding-bottom: 15px;
	}

	.news-section__images-wrapper {
		margin-top: 15px;
	}

	.news-line__separator {
		display: none;
	}

	.news-line__title,
	.news-line__message {
		display: block;
	}

}

@media screen and (max-width: 599px) {

	.description-area {
		flex-direction: column;
		align-items: center;
	}

	.cite__bottom-article {
		margin: 15px 0;
	}

	.slider-buttons {
		margin: 0 0 20px 0;
	}

	.persons-slider__card:nth-child(4n) {
		display: none;
	}

	.footer__about {
		flex-direction: column;
		align-items: center;
		text-align: center;
		padding-bottom: 15px;
	}

	.footer-icons {
		justify-content: center;
	}
}

@media screen and (max-width: 520px) {

	.header__nav {
		display: none;
	}

	.persons-slider__card:nth-child(2n) {
		display: none;
	}

	.article-section {
		display: block;
	}

	.article__cite-wrapper:first-child {
		padding-right: 10px;
		margin-bottom: 20px;
	}

	.news-section__images-wrapper {
		flex-direction: column;
		align-items: center;
	}

	.news__image-card:last-child {
		margin-left: 0;
	}

	.news__image-card {
		text-align: center;
		display: -webkit-flex;
		display: -moz-flex;
		display: -ms-flex;
		display: -o-flex;
		display: flex;
		flex-direction: column;
		align-items: center;
		margin-bottom: 20px;
	}
}

